content/vault/v1.4.x/content/docs/secrets/databases/mongodbatlas.mdx
---
layout: docs
page_title: MongoDB Atlas- Database - Secrets Engines
sidebar_title: MongoDB Atlas
description: |-
  MongoDB Atlas is one of the supported plugins for the database secrets engine. This
  plugin generates database credentials dynamically based on configured roles
  for MongoDB Atlas databases.
---

# MongoDB Atlas Database Secrets Engine

MongoDB Atlas is one of the supported plugins for the database secrets engine. This
plugin generates database credentials dynamically based on configured roles for
MongoDB Atlas databases.

See the [database secrets engine](/vault/docs/secrets/databases) docs for
more information about setting up the database secrets engine.

## Setup

1.  Enable the database secrets engine if it is not already enabled:

    ```text
    $ vault secrets enable database
    Success! Enabled the database secrets engine at: database/
    ```

    By default, the secrets engine will enable at the name of the engine. To
    enable the secrets engine at a different path, use the `-path` argument.

1.  Configure Vault with the proper plugin and connection information:

    ```text
    $ vault write database/config/my-mongodbatlas-database \
        plugin_name=mongodbatlas-database-plugin \
        allowed_roles="my-role" \
        public_key="jmskfortvf" \
        private_key="ea6acbc7-8a30-4a3f-812e-6f869c08bcd1" \
        project_id="4f96cad208574fd14aa8dda3a"
    ```

1. Configure a role that maps a name in Vault to a MongoDB Atlas command that executes and
   creates the database user credential:

    ```text
    $ vault write database/roles/my-role \
        db_name=my-mongodbatlas-database \
        creation_statements='{ \
           "database_name": "admin", \
           "roles": [{"databaseName":"admin","roleName":"atlasAdmin"}] \
        }' \
        default_ttl="1h" \
        max_ttl="24h"
    Success! Data written to: database/roles/my-role
    ```

## Usage

After the secrets engine is configured and a user/machine has a Vault token with
the proper permissions, it can generate credentials.

1. Generate a new credential by reading from the `/creds` endpoint with the name
of the role:

    $ vault read database/creds/my-role
    Key                Value
    ---                -----
    lease_id           database/creds/my-role/2f6a614c-4aa2-7b19-24b9-ad944a8d4de6
    lease_duration     1h
    lease_renewable    true
    password           A1a-QwxApKgnfCp1AJYN
    username           v-5WFTBKdwOTLOqWLgsjvH


## API

The full list of configurable options can be seen in the [MongoDB Atlas Database
Plugin HTTP API](/vault/api-docs/secret/databases/mongodbatlas) page.

For more information on the database secrets engine's HTTP API please see the
[Database Secrets Engine API](/api/secret/databases) page.
